--- a/_sass/external/_syntax.scss
+++ b/_sass/external/_syntax.scss
@@ -1,4 +1,4 @@
-.highlight  { background: #ffffff; }
+.highlight  { background: #eff; padding:0 .4em; border:1px solid #ddd}
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
