--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<article {% if page.feature-img %}class="feature-image"{% endif %}>
 
-  <header style="background-image: url('{{ site.baseurl }}/{{ page.feature-img }}')">
-    <h1 class="title">{{ page.title }}</h1>
-  </header>
-
-  <section class="post-content">
-    {{ content }}
-  </section>
-
-</article>
+<div class="article-wrapper">
+    <article>
+        {% include article-header.html page=page link=false share=page.share %}
+        <section class="post-content">
+            {{ content }}
+        </section>
+        {% include article-footer.html share=page.share eye_catch=true %}
+    </article>
+</div>
