--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,30 +1,24 @@
-// typography
+// typography.
 $font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-// global font-size
-$font-size: 1.00em;
+$font-size: 16px;
 
-// padding
-$padding-large: 20%;
-$padding-small: 5%;
-$padding-x-small: 3%;
+// source code typography.
+$code-font-family: Consolas, Monaco, 'Andale Mono', monospace;
+$code-font-size: 0.85em;
 
-// brand colors
-$brand-color: #fff;
+// vertical margin.
+$margin: 50px;
+
+// brand color.
+$brand-color: #f98752;
+
+// other major colors.
+$site-title-color: rgba(#000, .6);
+$page-title-color: $brand-color;
 $background-color: #fff;
-$border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
+$border-color: rgba(#000, .1);
 
-// typography colors
+// typography colors.
 $text-color: #383838;
-$link-color: #1ABC9C;
-$selection-color: #D4D4D4; // visible when highlighting text
-
-// header colors
-$header-link-color: #383838;
-
-// feature image for articles
-$feature-image-text-color: #fff;
-$feature-image-size: cover; // options include "cover", "contain", "auto"
-
-// header description box
-$header-desc-background-color: #F98752; 
-$header-desc-text-color: #FFF;
+$link-color: darken($brand-color, 40%);
+$blockquote-color: #777;
