--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,5 +1,6 @@
 // typography.
-$font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+//$font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family: 'MicroSoft Yahei', Helvetica, Arial, sans-serif;
 $font-size: 16px;
 
 // source code typography.
