--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -126,7 +126,7 @@
             margin-bottom: $margin;
             .panel {
                 padding: 1em 1.5em;
-                background-color: rgba($page-title-color, .2);
+                //background-color: rgba($page-title-color, .2);
                 h1 {
                     margin: 0;
                     &, a {
@@ -209,6 +209,17 @@
             .esb:last-child {
                 margin-right: 0;
             }
+        }
+    }
+
+    .tags-box{
+        li {
+            list-style: none;
+            font-weight: bold;
+            margin-top:10px;
+        }
+        .size{
+            font-size: 0.7em; font-weight: bold; vertical-align: super;
         }
     }
 }
